[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/game.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/UI.tscn" id="2"]
[ext_resource type="Texture2D" path="res://assets/grass.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/road.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/sidewalk.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1080, 256)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1080, 128)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1080, 128)

[node name="Game" type="Node2D"]
script = ExtResource("1")
goal_zone_texture = ExtResource("3")
road_texture = ExtResource("4")
start_zone_texture = ExtResource("3")
sidewalk_texture = ExtResource("5")

[node name="Background" type="Node2D" parent="."]

[node name="GoalZoneSprite" type="Sprite2D" parent="Background"]
position = Vector2(540, 128)

[node name="RoadSprite" type="Sprite2D" parent="Background"]
position = Vector2(540, 960)

[node name="StartZoneSprite" type="Sprite2D" parent="Background"]
position = Vector2(540, 1792)

[node name="Sidewalk1Sprite" type="Sprite2D" parent="Background"]
position = Vector2(540, 704)

[node name="Sidewalk2Sprite" type="Sprite2D" parent="Background"]
position = Vector2(540, 1216)

[node name="GoalZoneVisual" type="Polygon2D" parent="Background"]
color = Color(0.2, 0.6, 0.25, 1)
polygon = PackedVector2Array(0, 0, 1080, 0, 1080, 256, 0, 256)

[node name="RoadVisual" type="Polygon2D" parent="Background"]
color = Color(0.16, 0.16, 0.18, 1)
polygon = PackedVector2Array(0, 256, 1080, 256, 1080, 1664, 0, 1664)

[node name="StartZoneVisual" type="Polygon2D" parent="Background"]
color = Color(0.22, 0.45, 0.22, 1)
polygon = PackedVector2Array(0, 1664, 1080, 1664, 1080, 1920, 0, 1920)

[node name="GoalZone" type="Area2D" parent="."]
position = Vector2(540, 128)
monitoring = true
monitorable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalZone"]
shape = SubResource("1")

[node name="Sidewalk1" type="Area2D" parent="."]
position = Vector2(540, 704)
monitoring = true
monitorable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sidewalk1"]
shape = SubResource("2")

[node name="Sidewalk2" type="Area2D" parent="."]
position = Vector2(540, 1216)
monitoring = true
monitorable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sidewalk2"]
shape = SubResource("3")

[node name="Lanes" type="Node2D" parent="."]

[node name="Lane1" type="Node2D" parent="Lanes"]
position = Vector2(0, 320)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane1"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane2" type="Node2D" parent="Lanes"]
position = Vector2(0, 448)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane2"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane3" type="Node2D" parent="Lanes"]
position = Vector2(0, 576)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane3"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane4" type="Node2D" parent="Lanes"]
position = Vector2(0, 832)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane4"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane5" type="Node2D" parent="Lanes"]
position = Vector2(0, 960)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane5"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane6" type="Node2D" parent="Lanes"]
position = Vector2(0, 1088)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane6"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane7" type="Node2D" parent="Lanes"]
position = Vector2(0, 1344)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane7"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane8" type="Node2D" parent="Lanes"]
position = Vector2(0, 1472)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane8"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lane9" type="Node2D" parent="Lanes"]
position = Vector2(0, 1600)

[node name="SpawnTimer" type="Timer" parent="Lanes/Lane9"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="Cars" type="Node2D" parent="."]

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(540, 1856)

[node name="UI" parent="." instance=ExtResource("2")]